# python-garden

./: LICENSE  README.md
lesson_1/: LICENSE  README.md  pyproject.toml  requirements  run_api.py  run_consumer.py
lesson_1/app/api/: webapp.py
lesson_1/app/settings/: base.py  mq.py
lesson_2/: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_consumer.py
lesson_2/app/api/: webapp.py
lesson_2/app/settings/: db.py
reference_materials/: docker_overview.md
